[workspace]
resolver = "2"
members = ["programs/*"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# 工作区级别的版本统一
[workspace.dependencies]
borsh = "=0.10.4"
borsh-derive = "=0.10.4"
syn = "=1.0.109"

# 强制所有依赖使用兼容版本
#[patch.crates-io]
