[package]
name = "token_pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mainnet = []
testnet = []
devnet = []
localnet = []
default = ["devnet"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
#  cargo uninstall anchor-cli
#  cargo install --git https://github.com/coral-xyz/anchor --tag v0.29.0 anchor-cli --locked
#  cargo update -p ahash@0.8.7 --precise 0.8.6
[dependencies]
arrayref = "0.3.9"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
# 如果上面的 patch 方案不行，可以尝试这个版本
anchor-spl = { version = "0.29.0", features = ["metadata", "token_2022"] }
solana-security-txt = "1.1.1"
#proc-macro2 = "=1.0.78"
